--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,13 @@
+# frontend/Dockerfile
 # Build stage
 FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-# Install dependencies
-RUN npm install -g create-react-app
+# create-react-app uygulamanızda artık muhtemelen kullanılmıyor, kaldırabiliriz.
+# RUN npm install -g create-react-app
 
-# Copy package files
+# Copy package files (Context artık frontend klasörü olduğu için direkt kopyalayabiliriz)
 COPY package*.json ./
 
 # Install dependencies
@@ -29,6 +30,8 @@ RUN npm install -g serve
 # Copy built app from builder
 COPY --from=builder /app/build ./build
 
-EXPOSE 3001
+# Frontend'i çalıştırdığınız port 3000, bunu dışarıya açıyoruz.
+EXPOSE 3000 
 
+# CMD'yi 3000'e ayarlayın (Sizin komutunuzda '300' yazıyordu, '3000' olarak düzeltildiğini varsayıyorum)
 CMD ["serve", "-s", "build", "-l", "3000"]
