--- a/NotificationService/appsettings.json
+++ b/NotificationService/appsettings.json
@@ -19,9 +19,10 @@
   "Email": {
     "SmtpHost": "smtp.gmail.com",
     "SmtpPort": "587",
-    "SmtpUsername": "atacaneras@gmail.com",
-    "SmtpPassword": "bzck egww eftc dlmk",
-    "FromEmail": "atacaneras@gmail.com"
+    "SmtpUsername": "trendyolsiparisbildirim@gmail.com",
+    "SmtpPassword": "zbbg uskb xzcn ddwb",
+    "FromEmail": "trendyolsiparisbildirim@gmail.com",
+    "FromDisplayName": "Trendyol E-Ticaret"
   },
   "Sms": {
     "Provider": "Twilio",
