--- a/InvoiceService/appsettings.json
+++ b/InvoiceService/appsettings.json
@@ -2,8 +2,22 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=postgres-invoice;Port=5432;Database=InvoiceDb;Username=invoiceuser;Password=invoicepass123"
+  },
+  "RabbitMQ": {
+    "Host": "rabbitmq",
+    "Username": "admin",
+    "Password": "admin123",
+    "Port": 5672
+  },
+  "Services": {
+    "OrderService": "http://order-service",
+    "NotificationService": "http://notification-service"
+  }
 }
