--- a/NotificationService/appsettings.json
+++ b/NotificationService/appsettings.json
@@ -31,5 +31,8 @@
       "AuthToken": "YOUR_TWILIO_AUTH_TOKEN",
       "FromPhone": "+1234567890"
     }
+  },
+  "Services": {
+    "InvoiceService": "http://invoice-service"
   }
 }
