--- a/NotificationService/appsettings.json
+++ b/NotificationService/appsettings.json
@@ -19,11 +19,19 @@
   "Email": {
     "SmtpHost": "smtp.gmail.com",
     "SmtpPort": "587",
-    "SmtpUsername": "trendyolsiparisbildirim@gmail.com",
-    "SmtpPassword": "zbbg uskb xzcn ddwb",
-    "FromEmail": "trendyolsiparisbildirim@gmail.com",
+    "SmtpUsername": "atacaneras@gmail.com",
+    "SmtpPassword": "bpbn bvia kwjt sykv",
+    "FromEmail": "atacaneras@gmail.com",
     "FromDisplayName": "Trendyol E-Ticaret"
   },
+  //"Email": {
+  //  "SmtpHost": "smtp.gmail.com",
+  //  "SmtpPort": "587",
+  //  "SmtpUsername": "trendyolsiparisbildirim@gmail.com",
+  //  "SmtpPassword": "zbbg uskb xzcn ddwb",
+  //  "FromEmail": "trendyolsiparisbildirim@gmail.com",
+  //  "FromDisplayName": "Trendyol E-Ticaret"
+  //},
   "Sms": {
     "Provider": "Twilio",
     "Twilio": {
