--- a/NotificationService/appsettings.json
+++ b/NotificationService/appsettings.json
@@ -41,6 +41,7 @@
     }
   },
   "Services": {
-    "InvoiceService": "http://invoice-service"
+    "InvoiceService": "http://invoice-service",
+    "StockService": "http://stock-service"
   }
 }
