--- a/NotificationService/appsettings.json
+++ b/NotificationService/appsettings.json
@@ -22,16 +22,8 @@
     "SmtpUsername": "atacaneras@gmail.com",
     "SmtpPassword": "bpbn bvia kwjt sykv",
     "FromEmail": "atacaneras@gmail.com",
-    "FromDisplayName": "Trendyol E-Ticaret"
+    "FromDisplayName": "ATA E-Ticaret"
   },
-  //"Email": {
-  //  "SmtpHost": "smtp.gmail.com",
-  //  "SmtpPort": "587",
-  //  "SmtpUsername": "trendyolsiparisbildirim@gmail.com",
-  //  "SmtpPassword": "zbbg uskb xzcn ddwb",
-  //  "FromEmail": "trendyolsiparisbildirim@gmail.com",
-  //  "FromDisplayName": "Trendyol E-Ticaret"
-  //},
   "Sms": {
     "Provider": "Twilio",
     "Twilio": {
